LPS-40840 - This won't work as is, and has a few regressions (basically, whenever portlet-content doesn't exist) and isn't an issue in every theme. Instead, we should just make the header darker in the default classic color scheme when the lfr-configurator-visibility class is there to compensate for the opacity

--- a/portal-web/docroot/html/css/portal/generic_portlet.css
+++ b/portal-web/docroot/html/css/portal/generic_portlet.css
@@ -107,7 +107,7 @@
 	font-weight: bold;
 }
 
-.lfr-checkbox-preselected, .lfr-configurator-visibility .portlet-content {
+.lfr-checkbox-preselected, .lfr-configurator-visibility {
 	@include opacity(0.5);
 }
 
